--- a/index.html
+++ b/index.html
@@ -9,13 +9,44 @@
       integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
       crossorigin="anonymous"
     />
+    <style>
+        #message, #success{
+            display: none;
+        }
+        form {
+            width: 40%;
+            margin: 0 auto;
+        }
+        #order {
+            margin: 0 auto;
+        }
+        #delivery-location{
+            width: 40%;
+            margin: 0 auto;
+            text-align: center;
+            border: 1px solid green;
+            display: none;
+        }
+        #delivery-selection {
+            width: 20%;
+            margin: 0 auto;
+            text-align: center;
+        }
+        .btn {
+            display: block;
+            margin: 30px auto;
+        }
+
+    </style>
     <title>Pizza Order Form</title>
   </head>
   <body>
-    <h1>Place Your Order Today</h1>
+    <h1 class="text-center">Place Your Order Today</h1>
+    <p id="message" class="alert alert-danger"></p>
+    <p id="success" class="alert alert-success"></p>
 
     <form action="">
-      <select name="pizza" id="pizza" class="form-control">
+      <select name="pizza" id="pizza" class="form-control my-3">
         <option value="select-pizza">Select Pizza</option>
         <option value="pepperoni">Pepperoni Pizza</option>
         <option value="Neapolitan">Neapolitan Pizza</option>
@@ -23,23 +54,23 @@
         <option value="new-york">New York-Style Pizza</option>
       </select>
 
-      <select name="size" id="size" class="form-control">
+      <select name="size" id="size" class="form-control my-3">
         <option value="select-size">Select Pizza Size</option>
         <option value="1000">Large</option>
         <option value="900">Medium</option>
         <option value="600">Small</option>
       </select>
 
-      <input type="number" class="form-control" placeholder="Select Quantity" id="quantity" />
+      <input type="number" class="form-control my-3" placeholder="Select Quantity" id="quantity" />
 
-      <select name="crust" id="crust" class="form-control">
+      <select name="crust" id="crust" class="form-control my-3">
         <option value="select-crust">Select Pizza Crust</option>
         <option value="200">Crispy</option>
         <option value="400">Stuffed</option>
         <option value="300">Gluten Free</option>
       </select>
 
-      <select name="toppings" id="toppings" class="form-control">
+      <select name="toppings" id="toppings" class="form-control my-3">
         <option value="select-toppings">Select Pizza Toppings</option>
         <option value="400">Onions</option>
         <option value="500">Sausage</option>
@@ -47,7 +78,7 @@
         <option value="300">Extra Cheese</option>
       </select>
 
-      <input type="submit" class="btn btn-primary" value="order" id="order" />
+      <input type="submit" class="btn btn-primary my-3 text-center" value="order" id="order" />
     </form>
 
 
@@ -67,11 +98,14 @@
         </tbody>
       </table>
 
-      <div class="form-group">
-        <label for="delivery">I Need Delivery</label>
-        <input type="checkbox" id="delivery">
-      </div>
-      <input type="submit" class="btn btn-success" value="Complete Order">
+      <select name="delivery-selection" id="delivery-selection" class="form-control my-3">
+        <option value="no-delivery">I don't want delivery</option>
+        <option value="delivery">I want delivery</option>
+        
+      </select>
+
+      <input type="text" class="form-control" placeholder="Enter Delivery Location" id="delivery-location">
+      <input type="submit" class="btn btn-success" value="Complete Order" id="complete">
       
 
     <script
